--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
   </head>
   <body>
     <main>
-      <h2>Gregory Schoberth Bluewater Demos</h2>
+      <h1>Gregory Schoberth Bluewater Demos</h1>
       <a
         href="https://github.com/gschoberth/bluewater-technical/blob/main/README.md"
         >Readme For All Projects</a
       >
       <div>
-        <h4>Basic Requirements</h4>
-        <p>Repo</p>
+        <h2>Basic Requirements</h2>
+        <h3>Repo</h3>
         <a href="https://github.com/gschoberth/bluewater-technical"
           >Github Repo</a
         >
-        <p>Demo Link</p>
+        <h3>Demo Link</h3>
         <a href="https://gschoberth.github.io/bwt-hosted/original">Demo</a>
       </div>
       <div>
-        <h4>Expanded Features</h4>
+        <h2>Expanded Features</h2>
         <div>Additional Features</div>
         <p>Notes: This demo and codebased were built to demostrate the decoupling between visual elements,</br> and gamplay logic to allow for easy reuse or updating.</p>
         
@@ -37,13 +37,13 @@
           <li>Additional gameplay scene; Football field goal kick</li>
         </ul>
         
-        <p>Repo:</p>
+        <h3>Repo:</h3>
         <a href="https://github.com/gschoberth/bluewater-tech">Github Repo</a>
-        <p>Demo Link:</p>
+        <h3>Demo Link:</h3>
         <a href="https://gschoberth.github.io/bwt-hosted/features">Demo</a>
       </div>
       <div>
-        <h4>Additional Features (Soccer Only)</h4>
+        <h2>Additional Features (Soccer Only)</h2>
         <p>
           Notes:  I got a little enthusiastic
           with building this version, and had some fun adding some of the suggested additional gameplay</br>
@@ -59,10 +59,10 @@
           <li>Three attempts style gameplay</li>
           <li>Results screen after each attempt showing score progress.</li>
         </ul>
-        <p>Repo</p>
+        <h3>Repo</h3>
         <a href="https://github.com/gschoberth/bluewater-technical"
           >Github Repo</a>
-        <p>Demo Link</p>
+        <h3>Demo Link</h3>
         <a href="https://gschoberth.github.io/bwt-hosted/fullblown">Demo</a>
       </div>
     </main>
