--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h2>Expanded Features</h2>
         <div>Additional Features</div>
         <p>Notes: This demo and codebased were built to demostrate the decoupling between visual elements,</br> and gamplay logic to allow for easy reuse or updating.</p>
-        
+        <h5>Additional Features:</h5>
         <ul>
           <li>
             BA Menu; Double click top left corner to access. Includes additional
@@ -55,6 +55,7 @@
         
           <b>Football scene is disabled in this demo.</b>
         </p>
+        <h5>Additional Features:</h5>
         <ul>
           <li>Three attempts style gameplay</li>
           <li>Results screen after each attempt showing score progress.</li>
