--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
   </head>
   <body>
     <main>
-      <h1>Gregory Schoberth Bluewater Demos</h1>
+      <h1>GREG SCHOBERTH BLUEWATER TECHNICAL INTERVIEW DEMOS</h1>
+
+      <h2>README LINK FOR ALL PROJECTS</h2>
       <a
         href="https://github.com/gschoberth/bluewater-technical/blob/main/README.md"
-        >Readme For All Projects</a
+        >Readme Link</a
       >
       <div>
-        <h2>Basic Requirements</h2>
+        <h2>BASIC REQUIREMENTS</h2>
         <h3>Repo</h3>
         <a href="https://github.com/gschoberth/bluewater-technical"
           >Github Repo</a
@@ -25,7 +27,7 @@
         <a href="https://gschoberth.github.io/bwt-hosted/original">Demo</a>
       </div>
       <div>
-        <h2>Expanded Features</h2>
+        <h2>EXPANDED FEATURES</h2>
         <p>Notes: This demo and codebased were built to demostrate the decoupling between visual elements,</br> and gamplay logic to allow for easy reuse or updating.</p>
         <h5>Additional Features:</h5>
         <ul>
@@ -42,7 +44,7 @@
         <a href="https://gschoberth.github.io/bwt-hosted/features">Demo</a>
       </div>
       <div>
-        <h2>Additional Features (Soccer Only)</h2>
+        <h2>ADDITIONAL EXPANDED FEATURES (Soccer Only)</h2>
         <p>
           Notes:  I got a little enthusiastic
           with building this version, and had some fun adding some of the suggested additional gameplay</br>
